# traffic-predictions

./: README.md  pyproject.toml
api/: main.py
api/templates/: index.html
data/: avtopati.csv  avtopati_2014.csv  avtopati_2015.csv  avtopati_2016.csv  avtopati_2017.csv  avtopati_2018.csv  avtopati_2019.csv  avtopati_2020.csv  avtopati_2021.csv  avtopati_2022.csv  avtopati_2023.csv  avtopati_avg.csv
models/: IRAP_classifier.joblib  Wi_regressor.joblib
notebooks/: bounds.ipynb  feature_importance.ipynb  regressors.ipynb
notebooks/outputs/: feature_importance_2014.csv  feature_importance_2015.csv  feature_importance_2016.csv  feature_importance_2017.csv  feature_importance_2018.csv  feature_importance_2019.csv  feature_importance_2020.csv  feature_importance_2021.csv  feature_importance_2022.csv  feature_importance_2023.csv  feature_importance_avg.csv
notebooks/outputs/json/: feature_importances.json
src/: calc_importance.py  classifiers.py  data_prep.py
